// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourcesAxisComponent should not render if view model is null 1`] = `
<div
  id="root0"
  ngx-d3timeline-resources-axis=""
>
  
</div>
`;

exports[`ResourcesAxisComponent when Horizontal should render correctly 1`] = `
<div
  id="root2"
  ngx-d3timeline-resources-axis=""
>
  
  <g
    class="resources-axis-group"
  >
    
    <text
      dy="-2"
      transform="translate(0, 83.33333333333333)"
    >
       Series 1 
    </text>
    <text
      dy="-2"
      transform="translate(0, 250)"
    >
       Series 2 
    </text>
    <text
      dy="-2"
      transform="translate(0, 416.66666666666663)"
    >
       Series 3 
    </text>
    <line
      class="resources-axis-line"
      x2="500"
    />
  </g>
</div>
`;

exports[`ResourcesAxisComponent when Vertical should render correctly 1`] = `
<div
  id="root1"
  ngx-d3timeline-resources-axis=""
>
  
  <g
    class="resources-axis-group"
  >
    
    <text
      dy="-2"
      transform="translate(116.66666666666667, 0)"
    >
       Series 1 
    </text>
    <text
      dy="-2"
      transform="translate(350, 0)"
    >
       Series 2 
    </text>
    <text
      dy="-2"
      transform="translate(583.3333333333334, 0)"
    >
       Series 3 
    </text>
    <line
      class="resources-axis-line"
      x2="700"
    />
  </g>
</div>
`;
